# shard-a-zip

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  splitter.rs  utils.rs
